--- a/css/styles.css
+++ b/css/styles.css
@@ -207,18 +207,16 @@ mobile menu
 .mob-menu {
   display: flex;
   position: fixed;
-
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: 999;
-  pointer-events: none;
+
   justify-content: center;
   align-items: center;
   opacity: 0;
-
-  background-color: #ffffff;
+  background-color: #fff;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -233,7 +231,6 @@ mobile menu
 .mob-menu.is-open {
   opacity: 1;
   visibility: visible;
-  pointer-events: auto;
 }
 .nav-mob-menu {
   margin-bottom: auto;
@@ -272,7 +269,7 @@ mobile menu
   margin-top: 24px;
 }
 
-/*======btb=====*/
+/*======button close=====*/
 
 .btn-mob-menu {
   display: flex;
@@ -991,29 +988,6 @@ footer
 .icon-subscribe {
   margin-left: 16px;
   fill: #fff;
-}
-
-@media screen and (min-width: 768px) {
-  .foo-end {
-    max-width: 768px;
-    display: flex;
-    flex-direction: column;
-
-    flex-wrap: wrap;
-  }
-
-  .footer-container {
-    width: 264px;
-    height: 112px;
-  }
-  .social-media {
-    width: 208px;
-    height: 80px;
-  }
-  .foo-end .cont-subscribe {
-    justify-content: start;
-    align-items: start;
-  }
 }
 
 @media screen and (min-width: 1158px) {
