--- a/css/styles.css
+++ b/css/styles.css
@@ -866,15 +866,18 @@ fourth section
 footer
 ======================================================================================================================================================== */
 .foo-end {
-  margin: 0 auto;
-
   padding: 96px 0;
-  max-width: 320px;
   background-color: #2e2f42;
   text-align: center;
   color: #f4f4fd;
 }
-
+.foo-end-container {
+  display: flex;
+  align-items: baseline;
+  flex-wrap: wrap;
+  gap: 72px;
+  justify-content: center;
+}
 .logo-type {
   margin-bottom: 16px;
   display: inline-block;
@@ -897,23 +900,21 @@ footer
   letter-spacing: 0.02em;
   color: #f4f4fd;
   text-align: left;
-  margin-bottom: 72px;
 }
 
 .social-page {
+  margin-bottom: 16px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffff;
-  margin-bottom: 16px;
 }
 
 .social-media-menu {
   display: flex;
   justify-content: center;
   gap: 16px;
-  margin-bottom: 72px;
 }
 .social-media-item {
   width: 40px;
@@ -945,8 +946,14 @@ footer
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  margin-bottom: 16px;
 }
+
+.form-subscribe {
+  display: flex;
+  gap: 16px;
+  flex-wrap: wrap;
+}
+
 .inp-subscribe {
   width: 288px;
   height: 40px;
@@ -983,38 +990,31 @@ footer
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin: 0 auto;
-  margin-bottom: 16px;
 }
 .icon-subscribe {
   margin-left: 16px;
   fill: #fff;
 }
-@media screen and (min-width: 768px) and (max-width: 1157px) {
-  .foo-end {
-    min-width: 768px;
-  }
-  .main-text-foo {
-    margin-bottom: 0;
-  }
+
+@media screen and (min-width: 768px) {
   .foo-end-container {
     display: flex;
     align-items: baseline;
-
-    flex-direction: row;
     flex-wrap: wrap;
     gap: 72px 24px;
     padding-left: 108px;
     text-align: left;
+    justify-content: flex-start;
   }
 
   .footer-container {
     width: 264px;
-    margin: 0;
   }
-
+  .main-text-foo {
+    margin-bottom: 0;
+  }
   .cont-subscribe {
     width: 453px;
-    margin: 0;
   }
 
   .form-subscribe {
@@ -1022,6 +1022,7 @@ footer
     gap: 24px;
     margin: 0;
   }
+
   .inp-subscribe {
     width: 264px;
   }
@@ -1029,34 +1030,33 @@ footer
 
 @media screen and (min-width: 1158px) {
   .foo-end {
-    max-width: 1440px;
     padding: 100px 0;
     text-align: left;
-    height: 312px;
-    margin: 0 auto;
   }
 }
 .foo-end-container {
-  display: flex;
-  align-items: baseline;
+  padding-left: 15px;
+  gap: 0;
 }
 .footer-container {
   margin-right: 120px;
 }
-
 .main-text-foo {
   width: 264px;
 }
+
 .social-media-link:hover,
 .social-media-link:focus {
   background: #31d0aa;
 }
+
 .cont-subscribe {
-  margin-left: 80px;
+  margin-left: auto;
 }
 .form-subscribe {
   display: flex;
-  gap: 24px;
+  gap: 16px;
+  flex-wrap: wrap;
 }
 .inp-subscribe {
   opacity: 1;
