--- a/css/styles.css
+++ b/css/styles.css
@@ -212,10 +212,11 @@ mobile menu
   width: 100%;
   height: 100%;
   z-index: 999;
-
+  pointer-events: none;
   justify-content: center;
   align-items: center;
   opacity: 0;
+  visibility: hidden;
   background-color: #fff;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -231,6 +232,7 @@ mobile menu
 .mob-menu.is-open {
   opacity: 1;
   visibility: visible;
+  pointer-events: auto;
 }
 .nav-mob-menu {
   margin-bottom: auto;
@@ -875,7 +877,7 @@ footer
   display: flex;
   align-items: baseline;
   flex-wrap: wrap;
-  gap: 72px;
+  gap: 72px 24px;
   justify-content: center;
 }
 .logo-type {
@@ -935,7 +937,6 @@ footer
 }
 
 .cont-subscribe {
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -946,6 +947,7 @@ footer
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 16px;
 }
 
 .form-subscribe {
@@ -1001,7 +1003,7 @@ footer
     display: flex;
     align-items: baseline;
     flex-wrap: wrap;
-    gap: 72px 24px;
+
     padding-left: 108px;
     text-align: left;
     justify-content: flex-start;
@@ -1012,9 +1014,6 @@ footer
   }
   .main-text-foo {
     margin-bottom: 0;
-  }
-  .cont-subscribe {
-    width: 453px;
   }
 
   .form-subscribe {
@@ -1033,31 +1032,29 @@ footer
     padding: 100px 0;
     text-align: left;
   }
-}
-.foo-end-container {
-  padding-left: 15px;
-  gap: 0;
-}
-.footer-container {
-  margin-right: 120px;
-}
-.main-text-foo {
-  width: 264px;
-}
 
-.social-media-link:hover,
-.social-media-link:focus {
-  background: #31d0aa;
-}
+  .foo-end-container {
+    padding-left: 15px;
+    gap: 0;
+  }
+  .footer-container {
+    margin-right: 120px;
+  }
 
-.cont-subscribe {
-  margin-left: auto;
-}
-.form-subscribe {
-  display: flex;
-  gap: 16px;
-  flex-wrap: wrap;
-}
-.inp-subscribe {
-  opacity: 1;
+  .social-media-link:hover,
+  .social-media-link:focus {
+    background: #31d0aa;
+  }
+
+  .cont-subscribe {
+    margin-left: auto;
+  }
+  .form-subscribe {
+    display: flex;
+    gap: 16px;
+    flex-wrap: wrap;
+  }
+  .inp-subscribe {
+    opacity: 1;
+  }
 }
